@@ -23,15 +23,12 @@ public class Teacher extends Person {
     }
 
     private static void validateSpecialty(String specialty) {
-        try {
-        if (specialty == null || specialty.isBlank()) {
-                throw new IllegalPersonException("Specialty cannot be blank or null");
+        
+        if (specialty.trim().isEmpty()) {
+                throw new IllegalPersonException("bad specialty");
             }
-    } catch (Exception e) {
-        // TODO Auto-generated catch block
-        e.printStackTrace();
-    }
 
+    
     }// end of validateSpecialty
 
     /**
@@ -61,14 +58,6 @@ public class Teacher extends Person {
                     getDateOfDeath().getYyyyMmDd());
         }
     }
-       public static void main(String[] args)
-    {
-        System.out.println("***Working on Class Teacher***");
-        Date teacher1date = new Date( 2015,12,15);
-        Name teacher1name = new Name("jerry", "smith");
-
-        Teacher teacher1 = new Teacher(teacher1date, teacher1name , null);
-        System.out.println(teacher1);
-    }
+       
 
 }
